# brainfuck

./: .gitignore  .replit  Cargo.toml  Cross.toml  README.md  test.bf
.github/workflows/: build.yml
samples/: add.bf  add_preserve.bf  hello_world.bf  test.bf
src/: main.rs  text.rs
