[package]
name = "brainfuck"
version = "0.5.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Spartan2909/brainfuck"
description = "A fully featured implementation of Brainfuck in Rust."
keywords = ["brainfuck"]
categories = ["compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.2"
either = "1.8.0"
clap = { version = "4.0.0", features = ["derive", "unicode"] }
regex = "1"
